test/error/s_reserved_slot.lua
hstructure S
	meta : object;
	proxytable;
	__testdummy : object; -- already a reserved slot name
end
